welcome.lessons.welcome.traversal.Snake.scala.error
SnakeBuggle:14: error: Unmatched closing brace '}' ignored here
      }
      ^SnakeBuggle:42: error: Unmatched closing brace '}' ignored here
}
^